--- a/WhatsIn/Views/Results/Index.cshtml
+++ b/WhatsIn/Views/Results/Index.cshtml
@@ -91,10 +91,19 @@
         </div>
     </div>
 </div>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDI90tw9r9ufk3o5jHs4hmnDryfIW0F4WQ&libraries=places"></script>
 <script>
     var BlockNumber = 2;  //Infinate Scroll starts from second block
     var NoMoreData = false;
     var inProgress = false;
+
+	google.maps.event.addDomListener(window, 'load', function () {
+        var options = {
+            componentRestrictions: { country: "ph" }
+        };
+        var input = document.getElementById('Location');
+        var places = new google.maps.places.Autocomplete(input, options);
+    });
 
     $(function () {
 
